spacing issue solved for xs device

--- a/css/style.css
+++ b/css/style.css
@@ -91,3 +91,11 @@ nav .container{
     border-radius: 10px;
 }
 
+/* media query */
+@media only screen and (max-width:575px){
+    .container{
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+}
+
